fixed planets not showing

--- a/css/2d_interactive.css
+++ b/css/2d_interactive.css
@@ -139,7 +139,7 @@ img{
     right: 0.8em;
     width: 2em;
     height: 2em;
-    background-image: url('./assets/index_images/mercury.png');
+    background-image: url('../assets/2d_interactive/mercury.png');
     background-size: cover;
 }
 .venus::before {
@@ -147,7 +147,7 @@ img{
     right: 2em;
     width: 2em;
     height: 2em;
-    background-image: url('./assets/index_images/venus.png');
+    background-image: url('../assets/2d_interactive/venus.png');
     background-size: cover;
 }
 .earth::before {
@@ -155,7 +155,7 @@ img{
     right: 0em;
     width: 5em;
     height: 5em;
-    background-image: url('./assets/index_images/earth.png');
+    background-image: url('../assets/2d_interactive/earth.png');
     background-size: cover;
 }
 
@@ -164,7 +164,7 @@ img{
     right: 0.2em;
     width: 1.2em;
     height: 1.2em;
-    background-image: url('./assets/index_images/moon.png');
+    background-image: url('../assets/2d_interactive/moon.png');
     background-size: cover;
 }
 .mars::before {
@@ -172,7 +172,7 @@ img{
     right: 3em;
     width: 3em;
     height: 3em;
-    background-image: url('./assets/index_images/mars.png');
+    background-image: url('../assets/2d_interactive/mars.png');
     background-size: cover;
 }
 .jupiter::before {
@@ -180,7 +180,7 @@ img{
     right: 3em;
     width: 5em;
     height: 5em;
-    background-image: url('./assets/index_images/jupiter.png');
+    background-image: url('../assets/2d_interactive/jupiter.png');
     background-size: cover;
 }
 .saturn::before {
@@ -188,7 +188,7 @@ img{
     right: 5em;
     width: 4.5em;
     height: 4.5em;
-    background-image: url('./assets/index_images/saturn.png');
+    background-image: url('../assets/2d_interactive//saturn.png');
     background-size: cover;
 }
 .uranus::before {
@@ -196,7 +196,7 @@ img{
     right: 6.5em;
     width: 4em;
     height: 4em;
-    background-image: url('./assets/index_images/uranus.png');
+    background-image: url('../assets/2d_interactive//uranus.png');
     background-size: cover;
 }
 .neptune::before {
@@ -204,7 +204,7 @@ img{
     right: 8em;
     width: 4em;
     height: 4em;
-    background-image: url('./assets/index_images/neptune.png');
+    background-image: url('../assets/2d_interactive/neptune.png');
     background-size: cover;
 }
 .pluto::before {
@@ -212,7 +212,7 @@ img{
     right: 10em;
     width: 4em;
     height: 4em;
-    background-image: url('./assets/index_images/pluto.png');
+    background-image: url('../assets/2d_interactive/pluto.png');
     background-size: cover;
 }
 
